Read a blank help value the same way whichever space it is written with
The help branch asks isBlank rather than trim().isEmpty(). trim cuts characters
up to U+0020, so an em space asked for help while an ordinary space did not, and
the schema sentence described neither reading. The description now says blank,
and anEmptyHelpValueIsNotARequest walks six spellings of it. U+00A0 is not among
them: Character.isWhitespace excludes the non-breaking spaces, so isBlank does
not call it blank either.

everyCataloguedOperationIsAlsoDispatched asserts the operation is not gated
before it calls, because a gate answers ahead of the switch and would let a
missing case pass unseen. A throw is recorded as a failure rather than accepted:
it can come from before the switch as easily as from inside the delegate.